--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@ permissions and limitations under the License.
   <body>
     <div id="app">
       <div class="header">
-        <h1>Call Center Assistant Playground</h1>
+        <h1>Nova Sonic Playground- Exact Sciences</h1>
         <div class="header-controls">
           <div class="timer-container">
             <div class="timer-icon">🕐</div>
